<resources>
    <string name="app_name">EncuestasUdelP</string>
    <string name="txtRegistro">Registro</string>
    <string name="txtTituloHome">Bienvenido</string>
    <string name="txtPiePagina">From: Andrew Ch</string>
    <string name="hintUsuario">Usuario</string>
    <string name="hintPassword">Password</string>
    <string name="txtOk">Ok</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellidoPaterno">Apellido Paterno</string>
    <string name="hintApellidoMaterno">Apellido Materno</string>
    <string name="txtMasculino">Masculino</string>
    <string name="txtFemenino">Femenino</string>
    <string name="hintDireccion">Dirección</string>
    <string name="hintCorreo">Correo Electronico</string>
    <string name="txtEnviar">Enviar</string>
    <string name="txtRealizarEncuesta">Realizar Encuesta</string>
    <string name="txtMisEncuestas">Mis encuestas realizadas</string>
    <string name="txtEliminarEncuesta">Eliminar encuesta</string>
    <string name="txtEditarEncuesta">Editar encuesta</string>
    <string name="txtNombreUsuario">Nombre del usuario identificado</string>
    <string name="txtTituloEncuesta">Encuesta</string>
    <string name="txtEsquema">¿En que esquema has viajado?</string>
    <string name="txvEjecutiva">Ejecutiva</string>
    <string name="txtEconomica">Económica</string>
    <string name="txtPromo">Promo</string>
    <string name="txvExcelente">Excelente</string>
    <string name="txvBueno">Bueno</string>
    <string name="txvMalo">Malo</string>
    <string name="hintMejora">¿En que podemos mejorar?</string>
    <string name="txtOfertas">Quiero recibir ofertas y descuentos</string>
    <string name="btnEnviar">Enviar</string>
    <string name="txtServicio">¿Nuestro servicio es?</string>
    <string name="txtTituloEditarEncuesta">Editar Encuesta</string>
    <string name="txtTituloMisEncuestas">Mis encuestas</string>
    <string name="txtDetalleEncuesta">Detalle Encuesta</string>
    <string name="txtEncuesta">Encuesta</string>
    <string name="hintNumero">N</string>
    <string name="hintGenero">Genero</string>
    <string name="hintViajado">viajado</string>
    <string name="hintFrecuencia">Frecuencia</string>
    <string name="hintExperiencia">Experiencia</string>
</resources>
