<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RealizarEncuestaActivity">



            <TextView
                android:id="@+id/txvTituloEncuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtTituloEncuesta"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNombreE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintNombre"

            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTituloEncuesta" />

    <EditText
        android:id="@+id/edtApellidoPaternoE"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintApellidoPaterno"
        android:inputType="textPersonName"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreE" />

    <EditText
        android:id="@+id/edtApellidoMaternoE"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintApellidoMaterno"
        android:inputType="textPersonName"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtApellidoPaternoE"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreE" />

    <EditText
        android:id="@+id/etdCorreoEncuesta"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintCorreo"
        android:inputType="textEmailAddress"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/mitad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidoPaternoE" />

    <Spinner
        android:id="@+id/spnGeneroE"
        android:layout_width="150dp"
        android:layout_height="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:entries="@array/generos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mitad"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidoMaternoE" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="209dp"
            app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnAero"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/AeroPatito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

            <Spinner
                android:id="@+id/spnFrecuencia"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/Frecuencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnAero" />

            <Spinner
                android:id="@+id/spnExperiencia"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/Experiencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnFrecuencia" />

            <TextView
                android:id="@+id/txvPrimeraPreguntaEncuesta"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtEsquema"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnExperiencia" />

    <CheckBox
        android:id="@+id/ckbEjecutiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"

        android:text="@string/txvEjecutiva"
        app:layout_constraintStart_toEndOf="@+id/ckbEconomica"
        app:layout_constraintTop_toBottomOf="@+id/txvPrimeraPreguntaEncuesta"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/ckbEconomica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/txtEconomica"
        app:layout_constraintEnd_toStartOf="@+id/ckbEjecutiva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvPrimeraPreguntaEncuesta"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/ckbPromo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtPromo"
        app:layout_constraintStart_toEndOf="@+id/ckbEjecutiva"
        app:layout_constraintTop_toBottomOf="@+id/txvPrimeraPreguntaEncuesta"
        tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="392dp"
            app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvSegundaPreguntaEncuesta"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:text="@string/txtServicio"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />


            <RadioGroup
                android:id="@+id/rdgServicios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvSegundaPreguntaEncuesta">

                <RadioButton
                    android:id="@+id/rdbExcelente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txvExcelente" />

                <RadioButton
                    android:id="@+id/rdbBueno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txvBueno" />

                <RadioButton
                    android:id="@+id/rdbMalo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txvMalo" />
            </RadioGroup>

            <EditText
                android:id="@+id/edtMejorar"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintMejora"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdgServicios" />

            <Switch
                android:id="@+id/swtOfertasDescuentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtOfertas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtMejorar" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Enviar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtOfertasDescuentos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mitad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="201dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>